# Accomplish

./: .gitattributes  .gitignore  Cargo.toml  README.md  activity.csv  todos.csv  users.csv
data/: README.md
glace/: main.gl
glace/client/: _page.gl  activities.gl  err404.gl  index.gl  suggestions.gl  todo.gl
glace/srv/: activities.gl  ml.gl  todos.gl
public/: global.css  index.js
src/: main.rs
src/client/: _page.rs  activities.rs  err404.rs  index.rs  suggestions.rs  todo.rs
src/srv/: activities.rs  ml.rs  todos.rs
