[package]
name = "ProductivityManager"
version = "0.1.0"
authors = ["Maxime <emixampons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "*"
render = "*"
macro_lisp="0.1.0"
csv = "*"
serde = "*"
serde_derive = "*"
rand = "*"
gbdt = "*"